# ScoreCalculation

./: CMakeLists.txt  README.md  config.h.in  main.c
include/: event.h  list.h  menu.h  prehead.h  print.h  result.h  school.h  store.h
src/: CMakeLists.txt  event.c  menu.c  prehead.c  print.c  result.c  school.c  store.c
